--- a/src/templates/videoList.html
+++ b/src/templates/videoList.html
@@ -1,3 +1,3 @@
 <ul class="video-list">
-  <video-list-entry video="video" ng-repeat="video in $ctrl.videos track by $index"></video-list-entry>
+  <video-list-entry video="video" select-video="$ctrl.selectVideo" ng-repeat="video in $ctrl.videos track by $index"></video-list-entry>
 </ul>
