--- a/src/templates/app.html
+++ b/src/templates/app.html
@@ -1,15 +1,24 @@
 <div id="app container">
+  
   <nav class="navbar">
     <div class="col-md-6 col-md-offset-3">
       <search result="$ctrl.searchResults"><h5><em>search</em> component goes here</h5></search>
     </div>
   </nav>
+  
   <div class="row">
+    
     <div class="col-md-7">
-      <video-player video="$ctrl.currentVideo"><h5><em>videoPlayer</em> component goes here</h5></video-player>
+      <div>
+        <video-player video="$ctrl.currentVideo"><h5><em>videoPlayer</em> component goes here</h5></video-player>
+      </div>
+      <div>
+        <chat videos="$ctrl.videos" select-video="$ctrl.selectVideo"><h5><em>CHAT LIST</em> component goes here</h5></chat>
+      </div>
     </div>
+    
     <div class="col-md-5">
       <video-list videos="$ctrl.videos" select-video="$ctrl.selectVideo"><h5><em>videoList</em> component goes here</h5></video-list>
     </div>
-  <div>
+    
 </div>
