implemented chat feature - issue remaining with message order

--- a/src/templates/app.html
+++ b/src/templates/app.html
@@ -13,7 +13,7 @@
         <video-player video="$ctrl.currentVideo"><h5><em>videoPlayer</em> component goes here</h5></video-player>
       </div>
       <div>
-        <chat videos="$ctrl.videos" select-video="$ctrl.selectVideo"><h5><em>CHAT LIST</em> component goes here</h5></chat>
+        <chat room="$ctrl.currentVideo.id.videoId" ><h5><em>CHAT LIST</em> component goes here</h5></chat>
       </div>
     </div>
     
