--- a/src/templates/chatMessageEntry.html
+++ b/src/templates/chatMessageEntry.html
@@ -3,7 +3,7 @@
     <img class="media-object" src="{{url}}" />
   </div-->
   <div class="message-body">
-    <span class="chat-message-entry-username">{{$ctrl.message.username}}</span>
+    <span class="chat-message-entry-username">{{$ctrl.message.username}}:</span>
     <span class="chat-message-entry-text">{{$ctrl.message.text}}</span>
   </div>
 </li>
