--- a/styles/style.css
+++ b/styles/style.css
@@ -37,12 +37,12 @@ body {
   box-shadow: 0 1px 0 rgba(0,0,0,0.10);
 }
 
-.video-player {
+.video-player, .chat {
   margin-left: 20px;
   margin-right: 20px;
 }
 
-.video-player-details {
+.video-player-details, .chat {
   background: #fff;
   padding: 8px;
   border: 0;
@@ -57,7 +57,7 @@ body {
   box-shadow: 0 1px 2px rgba(0,0,0,.1);
 }
 
-.video-list-entry {
+.video-list-entry, .chat-message-entry {
   font-size: 16px;
   padding: 8px;
 }
@@ -71,10 +71,35 @@ body {
   cursor: pointer;
 }
 
+.message-body, .message-username {
+  font-size: 18px;
+}
+
+.chat-message-entry-username {
+  color: #991316;
+}
+
 .video-list-entry-detail {
   font-size: 12px;
   color: #999;
+
 }
+
+.chat-message-entry {
+  background: #f9f4f4;
+  margin-bottom: 10px;
+  border-radius: 8px;
+}
+
+.chat-feed {
+  list-style-type: none;
+  margin-top: 10px;
+  padding-left: 5%;
+  padding-right: 5%;
+  height: 230px;
+  overflow-y: scroll;
+}
+
 
 .loading {
   padding-left: 20px;
