--- a/styles/style.css
+++ b/styles/style.css
@@ -100,6 +100,16 @@ body {
   overflow-y: scroll;
 }
 
+.send-button {
+  width: 15%;
+  position: relative;
+  left: 85%;
+}
+
+
+.form-control {
+  width: 100%;
+}
 
 .loading {
   padding-left: 20px;
